--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,12 @@
 #container {
     display: flex;
     flex-wrap: wrap;
-    width: 560px;
+    width: 560px;   /* 560 % 16 = 0 */
     height: 560px;
 }
 
 .square {
-    width: 35px;
+    width: 35px;    /* 560 / 16 = 35px */
     height: 35px;
     border: 1px solid red;
     box-sizing: border-box;
